--- a/Assets/UI/Inventory/InventoryView.uxml
+++ b/Assets/UI/Inventory/InventoryView.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <ui:VisualElement name="InventoryRoot" style="flex-grow: 1; align-items: flex-end; justify-content: center;">
+    <ui:VisualElement name="InventoryRoot" style="flex-grow: 1; align-items: auto; justify-content: center; width: 100%; height: 100%; flex-direction: row;">
         <ui:VisualElement style="position: absolute; right: 0; background-color: rgba(60, 30, 30, 0.32); align-items: flex-end; justify-content: center; height: 100%;">
-            <ui:ListView focusable="true" style="width: 160px; align-items: flex-end; justify-content: center; flex-wrap: nowrap; flex-direction: column;" />
+            <ui:ListView focusable="true" show-border="false" show-bound-collection-size="true" style="width: 160px; align-items: flex-end; justify-content: center; flex-wrap: nowrap; flex-direction: column; height: 576px; flex-basis: auto;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
